mutants.out/log/src__doc.rs_line_46_col_9.log

*** src/doc.rs:46:9: replace Doc::group -> Doc with Default::default()

*** mutation diff:
--- src/doc.rs
+++ replace Doc::group -> Doc with Default::default()
@@ -38,17 +38,17 @@
 impl Doc {
     pub fn text(s: impl Into<String>) -> Doc {
         Doc::Text(s.into())
     }
     pub fn concat(items: impl IntoIterator<Item = Doc>) -> Doc {
         Doc::Concat(items.into_iter().collect())
     }
     pub fn group(inner: Doc) -> Doc {
-        Doc::Group(Box::new(inner))
+        Default::default() /* ~ changed by cargo-mutants ~ */
     }
     pub fn nest(inner: Doc) -> Doc {
         Doc::Nest(Box::new(inner))
     }
 }
 
 #[derive(Clone, Copy, PartialEq, Eq)]
 enum Mode {


*** /home/jp/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --package=cfmt@0.1.0
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
       Fresh libc v0.2.186
       Fresh cfg-if v1.0.4
       Fresh unicode-ident v1.0.24
       Fresh memchr v2.8.2
       Fresh fnv v1.0.7
       Fresh regex-syntax v0.8.11
       Fresh aho-corasick v1.1.4
       Fresh autocfg v1.5.1
       Fresh linux-raw-sys v0.12.1
       Fresh proc-macro2 v1.0.106
       Fresh getrandom v0.3.4
       Fresh regex-automata v0.4.14
       Fresh bitflags v2.13.0
       Fresh once_cell v1.21.4
       Fresh fastrand v2.4.1
       Fresh quote v1.0.46
       Fresh rand_core v0.9.5
       Fresh zerocopy v0.8.52
       Fresh rustix v1.1.4
       Fresh getrandom v0.4.3
       Fresh wait-timeout v0.2.1
       Fresh bit-vec v0.8.0
       Fresh quick-error v1.2.3
       Fresh syn v2.0.118
       Fresh ppv-lite86 v0.2.21
       Fresh tempfile v3.27.0
       Fresh bit-set v0.8.0
       Fresh rand_xorshift v0.4.0
       Fresh rand v0.9.4
       Fresh num-traits v0.2.19
       Fresh unarray v0.1.4
       Fresh logos-codegen v0.16.1
       Fresh rusty-fork v0.3.1
       Fresh rand_chacha v0.9.0
       Fresh logos-derive v0.16.1
       Fresh proptest v1.11.0
       Fresh logos v0.16.1
       Dirty cfmt v0.1.0 (/tmp/cargo-mutants-c-format-RkOWWx.tmp): the file `src/doc.rs` has changed (1782619752.426840539s, 7s after last build at 1782619745.953483015s)
   Compiling cfmt v0.1.0 (/tmp/cargo-mutants-c-format-RkOWWx.tmp)
     Running `/home/jp/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/rustc --crate-name cfmt --edition=2024 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 '--warn=clippy::pedantic' --forbid=unsafe_code '--allow=clippy::too_many_lines' '--allow=clippy::similar_names' '--allow=clippy::must_use_candidate' '--allow=clippy::assigning_clones' --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=a4b1a2cc4d498b46 -C extra-filename=-a84e12700bb01142 --out-dir /tmp/cargo-mutants-c-format-RkOWWx.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-c-format-RkOWWx.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-c-format-RkOWWx.tmp/target/debug/deps --extern logos=/tmp/cargo-mutants-c-format-RkOWWx.tmp/target/debug/deps/liblogos-4c6e00a209650053.rlib --extern proptest=/tmp/cargo-mutants-c-format-RkOWWx.tmp/target/debug/deps/libproptest-f3a23dcc63ec6135.rlib`
     Running `/home/jp/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/rustc --crate-name cfmt --edition=2024 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 '--warn=clippy::pedantic' --forbid=unsafe_code '--allow=clippy::too_many_lines' '--allow=clippy::similar_names' '--allow=clippy::must_use_candidate' '--allow=clippy::assigning_clones' --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=3f53573a9b6bab2f -C extra-filename=-99f850ce46e24a52 --out-dir /tmp/cargo-mutants-c-format-RkOWWx.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-c-format-RkOWWx.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-c-format-RkOWWx.tmp/target/debug/deps --extern logos=/tmp/cargo-mutants-c-format-RkOWWx.tmp/target/debug/deps/liblogos-4c6e00a209650053.rmeta`
error[E0277]: the trait bound `doc::Doc: Default` is not satisfied
  --> src/doc.rs:46:9
   |
46 |         Default::default() /* ~ changed by cargo-mutants ~ */
   |         ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Default` is not implemented for `doc::Doc`
  --> src/doc.rs:17:1
   |
17 | pub enum Doc {
   | ^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `cfmt` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/jp/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/rustc --crate-name cfmt --edition=2024 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 '--warn=clippy::pedantic' --forbid=unsafe_code '--allow=clippy::too_many_lines' '--allow=clippy::similar_names' '--allow=clippy::must_use_candidate' '--allow=clippy::assigning_clones' --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=a4b1a2cc4d498b46 -C extra-filename=-a84e12700bb01142 --out-dir /tmp/cargo-mutants-c-format-RkOWWx.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-c-format-RkOWWx.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-c-format-RkOWWx.tmp/target/debug/deps --extern logos=/tmp/cargo-mutants-c-format-RkOWWx.tmp/target/debug/deps/liblogos-4c6e00a209650053.rlib --extern proptest=/tmp/cargo-mutants-c-format-RkOWWx.tmp/target/debug/deps/libproptest-f3a23dcc63ec6135.rlib` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `Doc: Default` is not satisfied
  --> src/doc.rs:46:9
   |
46 |         Default::default() /* ~ changed by cargo-mutants ~ */
   |         ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Default` is not implemented for `Doc`
  --> src/doc.rs:17:1
   |
17 | pub enum Doc {
   | ^^^^^^^^^^^^

error: could not compile `cfmt` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/jp/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/rustc --crate-name cfmt --edition=2024 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 '--warn=clippy::pedantic' --forbid=unsafe_code '--allow=clippy::too_many_lines' '--allow=clippy::similar_names' '--allow=clippy::must_use_candidate' '--allow=clippy::assigning_clones' --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=3f53573a9b6bab2f -C extra-filename=-99f850ce46e24a52 --out-dir /tmp/cargo-mutants-c-format-RkOWWx.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-c-format-RkOWWx.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-c-format-RkOWWx.tmp/target/debug/deps --extern logos=/tmp/cargo-mutants-c-format-RkOWWx.tmp/target/debug/deps/liblogos-4c6e00a209650053.rmeta` (exit status: 1)

*** result: Failure(101)
